# sgl-ui-designer

./: .gitignore  Cargo.toml  LICENSE  build.rs  package-lock.json  package.json  tauri.conf.json  vite.config.js
capabilities/: default.json
icons/: icon.icns
src/: ai_panel.js  app.js  checkbox_icon.js  components.html  components.js  editor.html  editor.js  home.js  index.html  llm.rs  main.rs  preview.html  preview.js  render_common.js  settings.html  settings.js  sgl_api.js  sgl_renderer.js  styles.css  updater.js
src/llm/: llm_config.js  llm_prompts.js
