[package]
name = "sgl-ui-designer"
version = "0.1.0"
description = "SGL UI Designer - Visual embedded GUI design tool"
authors = ["SGL UI Designer Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
bundle = { active = false, targets = "all" }
