[package]
name = "sgl-ui-designer"
version = "0.1.3"
description = "SGL UI Designer - Visual embedded GUI design tool"
authors = ["SGL UI Designer Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
bundle = { active = false, targets = "all" }
